# chicken

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  NAMING.md  cliff.toml  justfile  rust-analyzer.toml
.claude/: CLAUDE.md
.github/workflows/: changelog.yml  ci.yml  coverage.yml  notify-clients.yml  release.yml
crates/chicken/: Cargo.toml
crates/chicken/examples/: steam.rs
crates/chicken/src/: lib.rs  steamworks.rs
crates/chicken_exitcodes/: Cargo.toml
crates/chicken_exitcodes/src/: lib.rs
crates/chicken_identity/: Cargo.toml  todo.md
crates/chicken_identity/src/: lib.rs
crates/chicken_network/: AGENTS.md  Cargo.toml  README.md
crates/chicken_network/src/: client.rs  lib.rs  local.rs  server.rs  server_old.rs  settings.rs  shared.rs  singleplayer.rs
crates/chicken_network/src/client/: auth.rs  discovery.rs
crates/chicken_network/src/server/: auth.rs  chat.rs  discovery.rs  local.rs  networking.rs  quic.rs  roles.rs  steam.rs
crates/chicken_notifications/: Cargo.toml
crates/chicken_notifications/src/: lib.rs
crates/chicken_polygon/: Cargo.toml  plan.md
crates/chicken_polygon/src/: lib.rs
crates/chicken_polygon/src/i_float/: fix_vec.rs  macros.rs  mod.rs  triangle.rs  u128.rs
crates/chicken_polygon/src/i_float/int/: point.rs  rect.rs
crates/chicken_polygon/src/i_key_sort/: mod.rs
crates/chicken_polygon/src/i_key_sort/sort/: bin_layout.rs  buffer.rs  key.rs  mapper.rs  min_max.rs  mod.rs  one_key.rs  one_key_cmp.rs  spread.rs  two_keys.rs  two_keys_cmp.rs
crates/chicken_polygon/src/i_key_sort/sort/parallel/: bin_layout.rs  cpu_count.rs  mod.rs  pre_sort.rs  slice_one_key.rs  slice_one_key_cmp.rs  slice_two_keys.rs  slice_two_keys_cmp.rs  sub_sort.rs
crates/chicken_polygon/src/i_key_sort/sort/serial/: layout_one_key.rs  layout_one_key_cmp.rs  mapper_cmp.rs  (+11 more)
crates/chicken_polygon/src/i_overlay/: mod.rs
crates/chicken_polygon/src/i_overlay/bind/: segment.rs  solver.rs
crates/chicken_polygon/src/i_overlay/core/: divide.rs  exract_ocg.rs  extract.rs  graph.rs  link.rs  nearest_vector.rs  overlay.rs  overlay_rule.rs  simplify.rs  solver.rs
crates/chicken_polygon/src/i_overlay/geom/: end.rs  id_point.rs  v_segment.rs  x_segment.rs
crates/chicken_polygon/src/i_overlay/segm/: boolean.rs  build.rs  merge.rs  offset.rs  segment.rs  sort.rs  string.rs  winding.rs
crates/chicken_polygon/src/i_overlay/split/: cross_solver.rs  fragment.rs  grid_layout.rs  line_mark.rs  snap_radius.rs  solver.rs  solver_fragment.rs  solver_list.rs  solver_tree.rs
crates/chicken_polygon/src/i_overlay/string/: clip.rs  extract.rs  filter.rs  graph.rs  line.rs  overlay.rs  slice.rs  split.rs
crates/chicken_polygon/src/i_overlay/util/: log.rs
crates/chicken_polygon/src/i_overlay/vector/: edge.rs  extract.rs  simplify.rs
crates/chicken_polygon/src/i_shape/: mod.rs
crates/chicken_polygon/src/i_shape/fix/: path.rs  paths.rs  shape.rs  shapes.rs
crates/chicken_polygon/src/i_shape/flat/: buffer.rs
crates/chicken_polygon/src/i_shape/int/: area.rs  count.rs  dedup.rs  despike.rs  mod.rs  path.rs  reverse.rs  shape.rs  simple.rs
crates/chicken_polygon/src/i_shape/macros/: mod.rs
crates/chicken_polygon/src/i_shape/tests/: path_test.rs
crates/chicken_polygon/src/i_tree/: mod.rs
crates/chicken_polygon/src/i_tree/key/: array.rs  entity.rs  iter.rs  list.rs  node.rs  pool.rs  tree.rs
crates/chicken_polygon/src/i_tree/map/: list.rs  node.rs  pool.rs  tree.rs
crates/chicken_polygon/src/i_tree/seg/: bit.rs  chunk.rs  entity.rs  heap.rs  layout.rs  tree.rs
crates/chicken_polygon/src/i_tree/set/: list.rs  pool.rs  tree.rs
crates/chicken_polygon/src/i_triangle/: mod.rs
crates/chicken_polygon/src/i_triangle/advanced/: buffer.rs  centroid.rs  convex.rs  delaunay.rs  triangulation.rs
crates/chicken_polygon/src/i_triangle/geom/: point.rs  triangle.rs
crates/chicken_polygon/src/i_triangle/int/: binder.rs  custom.rs  meta.rs  solver.rs  triangulatable.rs  triangulation.rs  triangulator.rs  unchecked.rs  validation.rs
crates/chicken_polygon/src/i_triangle/tessellation/: split.rs
crates/chicken_polygon/src/shape/: data.rs
crates/chicken_protocols/: Cargo.toml  README.md  todo.md
crates/chicken_protocols/src/: auth.rs  chat.rs  lib.rs
crates/chicken_settings/: Cargo.toml
crates/chicken_settings/src/: delta.rs  error.rs  events.rs  format.rs  lib.rs  path.rs  plugin.rs  storage.rs
crates/chicken_settings_content/: Cargo.toml
crates/chicken_settings_content/src/: lib.rs  networking.rs  role_store.rs  server_access.rs
crates/chicken_settings_derive/: Cargo.toml
crates/chicken_settings_derive/src/: lib.rs
crates/chicken_settings_edit/: Cargo.toml
crates/chicken_settings_edit/src/: lib.rs
crates/chicken_states/: Cargo.toml  LICENSE  README.md  run_tests.sh
crates/chicken_states/src/: events.rs  lib.rs  logic.rs  states.rs
crates/chicken_states/src/events/: app.rs  menu.rs  session.rs
crates/chicken_states/src/events/menu/: main.rs  multiplayer.rs  settings.rs  singleplayer.rs  wiki.rs
crates/chicken_states/src/logic/: app.rs  menu.rs  session.rs
crates/chicken_states/src/logic/menu/: main.rs  multiplayer.rs  settings.rs  singleplayer.rs  wiki.rs
crates/chicken_states/src/logic/session/: client.rs  server.rs
crates/chicken_states/src/states/: app.rs  menu.rs  session.rs
crates/chicken_states/src/states/menu/: main.rs  multiplayer.rs  settings.rs  singleplayer.rs  wiki.rs
crates/chicken_states/tests/app/: main.rs
crates/chicken_states/tests/common/: mod.rs
crates/chicken_states/tests/menu_multiplayer/: main.rs
crates/chicken_states/tests/menu_settings/: main.rs
crates/chicken_states/tests/menu_singleplayer/: main.rs
crates/chicken_states/tests/menu_wiki/: main.rs
crates/chicken_states/tests/session_client/: main.rs
crates/chicken_states/tests/session_server/: main.rs
crates/chicken_states/tests/session_server_headless/: main.rs
crates/chicken_steam/: Cargo.toml
crates/chicken_steam/src/: lib.rs
scripts/: doc_runner.py  test_runner.py
xtask/: Cargo.toml
xtask/src/: config.rs  main.rs  runner.rs
(+13 files in other folders)
