[workspace]
resolver = "2"
members = [
    "crates/chicken",
    "crates/chicken_exitcodes",
    "crates/chicken_identity",
    "crates/chicken_network",
    "crates/chicken_notifications",
    "crates/chicken_protocols",
    "crates/chicken_settings",
    "crates/chicken_settings_content",
    "crates/chicken_settings_derive",
    "crates/chicken_settings_edit",
    "crates/chicken_states",
    "crates/chicken_steam",
    # "crates/chicken_polygon",    # falls nötig
]
default-members = ["crates/chicken"]

[workspace.package]
publish = false
edition = "2024"
license = "MIT"
authors = ["Tim-Jonas Wechler"]


[workspace.dependencies]

# Workspace member crates
chicken = { path = "crates/chicken" }
chicken_exitcodes = { path = "crates/chicken_exitcodes" }
chicken_identity = { path = "crates/chicken_identity" }
chicken_network = { path = "crates/chicken_network" }
chicken_notifications = { path = "crates/chicken_notifications" }
chicken_protocols = { path = "crates/chicken_protocols" }
chicken_settings = { path = "crates/chicken_settings" }
chicken_settings_content = { path = "crates/chicken_settings_content" }
chicken_settings_derive = { path = "crates/chicken_settings_derive" }
chicken_settings_edit = { path = "crates/chicken_settings_edit" }
chicken_states = { path = "crates/chicken_states" }
chicken_steam = { path = "crates/chicken_steam" }

#external crates
aeronet = { version = "0.19.0" }
aeronet_io = { version = "0.19.0" }
aeronet_channel = { version = "0.19.0" }
aeronet_replicon = { version = "0.19.0" }
aeronet_webtransport = { version = "0.19.0" }
aeronet_steam = { version = "0.19.0" }

bevy = {version = "0.18.0", default-features = false}
bevy_egui = { version = "0.39.0" }
bevy_replicon = { version = "0.38.2", default-features = false}

serde = { version = "1.0.228"}
steamworks = { version = "0.12.2" }
bincode = "1.3.3"
serde_json = "1.0.133"
serde_yaml = "0.9.34"
toml = "0.8.19"
tokio = { version = "1.42.0", features = ["fs", "rt-multi-thread", "macros"] }
async-trait = "0.1.83"
notify = "6.1.1"
thiserror = "2.0.9"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
