[package]
name = "chicken"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true


[dependencies]
chicken_network = { workspace = true }
chicken_identity = { workspace = true }
chicken_states = { workspace = true }
chicken_notifications = { workspace = true }
chicken_exitcodes = { workspace = true }
chicken_protocols = { workspace = true }
chicken_settings = { workspace = true }
chicken_settings_content = { workspace = true }
chicken_steam = { workspace = true }
bevy = { workspace = true }





[features]
example_bevy3d = ["bevy/3d"]


[lints]
workspace = true

[[example]]
name = "steam"
path = "examples/steam.rs"
required-features = ["example_bevy3d"]
