[package]
name = "chicken"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true


[dependencies]
chicken_network = { workspace = true }
chicken_identity = { workspace = true }
chicken_states = { workspace = true }
chicken_notifications = { workspace = true }
chicken_exitcodes = { workspace = true }
chicken_protocols = { workspace = true }
chicken_settings = { workspace = true }
chicken_settings_content = { workspace = true }
chicken_steam = { workspace = true }
bevy = { workspace = true }





[features]
hosted = [
    "chicken_states/hosted",
    "chicken_protocols/hosted",
    "chicken_network/client",
]
headless = [
    "chicken_states/headless",
    "chicken_protocols/headless",
    "chicken_network/server",
]
example_bevy3d = ["bevy/3d"]


[lints]
workspace = true

[[example]]
name = "steam"
path = "examples/steam.rs"
required-features = ["example_bevy3d"]
