[package]
name = "chicken_network"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true


[dependencies]
aeronet = { workspace = true }
aeronet_io = { workspace = true }
aeronet_channel = { workspace = true }
aeronet_replicon = { workspace = true, features = ["server"] }
aeronet_webtransport = { workspace = true, features = ["server", "dangerous-configuration"] }

bevy = { workspace = true, features= ["bevy_log"]}
bevy_replicon = { workspace = true }

chicken_states = { workspace = true }
chicken_notifications = { workspace = true }
chicken_exitcodes = { workspace = true }
chicken_settings = { workspace = true }
chicken_settings_content = { workspace = true }

anyhow = "1.0"

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"

[features]
default = ["aeronet_replicon/server", "aeronet_webtransport/server", "bevy_replicon/server","client"]
server = ["chicken_states/server"]
client = ["aeronet_replicon/client", "aeronet_webtransport/client", "bevy_replicon/client", "chicken_states/client"]

[lints]
workspace = true
