[package]
name = "chicken_network"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true


[dependencies]
aeronet = { workspace = true }
aeronet_io = { workspace = true }
aeronet_channel = { workspace = true }
aeronet_replicon = { workspace = true, features = ["server"] }
aeronet_webtransport = { workspace = true, features = ["server", "dangerous-configuration"] }
aeronet_steam = { workspace = true }

bevy = { workspace = true, features= ["bevy_log"]}
bevy_replicon = { workspace = true }

chicken_identity = { workspace = true }
chicken_states = { workspace = true }
chicken_protocols = { workspace = true }
chicken_notifications = { workspace = true }
chicken_exitcodes = { workspace = true }
chicken_settings = { workspace = true }
chicken_settings_content = { workspace = true }

anyhow = "1.0"

# Kryptographie für Ed25519 Challenge-Response Auth
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"

[features]
default = ["aeronet_replicon/server", "aeronet_webtransport/server", "bevy_replicon/server","client"]
server = ["chicken_states/headless", "chicken_protocols/headless"]
client = ["aeronet_replicon/client", "aeronet_webtransport/client", "bevy_replicon/client", "chicken_states/hosted", "chicken_protocols/hosted"]

[lints]
workspace = true
