[package]
name = "chicken_protocols"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true



[dependencies]
bevy = { workspace = true,  features = ["serialize","bevy_log"] }
bevy_replicon = { workspace = true }

chicken_identity = { workspace = true }
chicken_states = { workspace = true, optional = true }

serde = { workspace = true, features = ["derive"] }


[features]
default = []
hosted = ["bevy_replicon/server", "bevy_replicon/client", "dep:chicken_states", "chicken_states/hosted"]
headless = ["bevy_replicon/server", "dep:chicken_states", "chicken_states/headless"]

[lints]
workspace = true
