[package]
name = "chicken_settings"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
bevy_ecs = "0.18.0"
bevy_app = "0.18.0"
bevy_log = "0.18.0"
bevy_tasks = "0.18.0"
bevy_reflect = "0.18.0"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
async-trait = { workspace = true }
thiserror = { workspace = true }
crossbeam-channel = "0.5"

# Type-safe paths
camino = "1.1.9"

chicken_settings_derive = { path = "../chicken_settings_derive" }
chicken_settings_edit = { path = "../chicken_settings_edit" }

[dev-dependencies]
tempfile = "3.0"

[features]
default = []

[lints]
workspace = true
