[package]
name = "chicken_settings_content"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
bevy_ecs = "0.18.0"
bevy_app = "0.18.0"
bevy_log = "0.18.0"
bevy_tasks = "0.18.0"
bevy_reflect = "0.18.0"
serde = { workspace = true, features = ["derive"] }
chicken_settings = { path = "../chicken_settings" }

[dev-dependencies]
tempfile = "3.0"

[features]
default = []
client = []
server = []

[lints]
workspace = true
