[package]
name = "chicken_settings_edit"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
toml_edit = "0.22"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
camino = "1.1"

[dev-dependencies]
tempfile = "3.0"

[lints]
workspace = true
