[package]
name = "chicken_states"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true


[dependencies]
bevy = {workspace=true, features= ["bevy_log", "bevy_state", "keyboard"]}
chicken_exitcodes = { workspace = true }
serde = { workspace = true, features = ["derive"] }
aquamarine = { workspace = true }

[features]
default = []
hosted = []
headless = []

[lints]
workspace = true


[dev-dependencies]

[[test]]
name = "menu_wiki"
path = "tests/menu_wiki/main.rs"
required-features = ["hosted"]

[[test]]
name = "menu_singleplayer"
path = "tests/menu_singleplayer/main.rs"
required-features = ["hosted"]

[[test]]
name = "menu_settings"
path = "tests/menu_settings/main.rs"
required-features = ["hosted"]

[[test]]
name = "session_server"
path = "tests/session_server/main.rs"
required-features = ["hosted"]

[[test]]
name = "session_client"
path = "tests/session_client/main.rs"
required-features = ["hosted"]

[[test]]
name = "session_server_headless"
path = "tests/session_server_headless/main.rs"
required-features = ["headless"]
