[package]
name = "chicken_steam"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
bevy = { workspace = true }
chicken_identity = { workspace = true }
steamworks = { workspace = true }

[lints]
workspace = true
